Project5_Kong/yaml/helloapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: hashicorp/http-echo:1.0.0
        args:
        - "-text=Hello from Kong Lab 1"
        ports:
        - containerPort: 5678
